--- a/indexStyles.css
+++ b/indexStyles.css
@@ -7,6 +7,7 @@ body {
     flex-direction: column;
     width: 100%;
     font-family: "Lexend", sans-serif;
+    overflow-x: hidden; /* Hide horizontal overflow */
 }
 
 .servicesBlocks {
@@ -94,6 +95,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     font-weight: 800;
+    text-shadow: 3px 3px #000000;
     
     
   }
@@ -108,6 +110,7 @@ body {
     transform: translate(-50%, -50%);
     margin-top: 75px;
     font-weight: 700;
+    text-shadow: 3px 3px #000000;
   }
 
   .mySlides a {
@@ -122,6 +125,7 @@ body {
     padding: 15px;
     background-color: #6BBF59;
     margin-top: 160px;
+    
     
   }
   
@@ -154,7 +158,10 @@ body {
   
   /* On smaller screens, decrease text size */
   @media only screen and (max-width: 300px) {
-    .prev, .next,.text {font-size: 11px}
+    .prev, .next,.text {
+        font-size: 11px
+    }
+    
   }
 
 
@@ -351,7 +358,7 @@ body {
 .statsSection {
     display: flex; /* Use flexbox layout */
     justify-content: space-between; /* Distribute the .stat divs evenly */
-    width: 95%; /* Parent div takes full width */
+    width: 100%; /* Parent div takes full width */
     gap: 20px; /* Add space between the .stat boxes */
 }
 
@@ -388,6 +395,7 @@ body {
     }
 
     .stat {
+        width: 100%;
         flex: 0 1 100%; /* Set width of each box to 100% of the parent container */
         padding: 15px; /* Slightly reduce padding for smaller screens */
     }
@@ -603,6 +611,7 @@ body {
         font-size: 15px;
         width: 100%;
         top: 40%;
+        text-shadow: 1.5px 1.5px #000000;
     }
 
     .textDes {
@@ -612,6 +621,7 @@ body {
         font-size: 25px;
         width: 100%;
         top: 35%;
+        text-shadow: 1.5px 1.5px #000000;
     }
 
     .mySlides a {
@@ -625,9 +635,10 @@ body {
     }
 
     .prev, .next {
-        font-size: 12px;
-        padding: 12px;
+        font-size: 10px;
+        padding: 8px;
         top: 65%;
+        height: 12px;
     }
 
     .servicesBlocks {
