--- a/indexStyles.css
+++ b/indexStyles.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     width: 100%;
     font-family: "Lexend", sans-serif;
-    
+    overflow-x: hidden;
 }
 
 html {
@@ -15,7 +15,7 @@ html {
 }
 
 * {
-    outline: 1px solid blue;
+    outline: 1px solid green;
 }
 
 .about-us {
