--- a/indexStyles.css
+++ b/indexStyles.css
@@ -15,7 +15,7 @@ html {
 }
 
 * {
-    outline: 1px solid green;
+    outline: 1px solid white;
 }
 
 .about-us {
@@ -438,7 +438,7 @@ html {
 
 /* Footer Styles */
 .footer {
-    width: 100%;
+    
     background-color: #d3d3d3; /* Dark green background */
     color: rgb(0, 0, 0);
     display: flex;
